tests/fails/f8.t
require("fail")

terra foo() : {int,1} 
end
foo()
